<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.main.registry.RegisterActivity">

    <TextView
        android:layout_marginTop="300dp"
        android:layout_marginStart="100dp"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_text" />
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email_register"
        android:layout_centerInParent="true"
        android:id="@+id/email_register" />
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint_regicter"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/email_register"
        android:layout_marginTop="30dp"
        android:id="@+id/password_register" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_text_register"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/password_register"
        android:layout_marginTop="40dp"
        android:id="@+id/button_register" />

</RelativeLayout>