<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.main.registry.LoginActivity">

    <TextView
        android:layout_marginTop="300dp"
        android:layout_marginStart="100dp"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_it_s_time_to_travel" />
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:layout_centerInParent="true"
        android:id="@+id/email_login"
        android:importantForAutofill="no"
 />
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/email_login"
        android:layout_marginTop="30dp"
        android:id="@+id/password_login"
        android:importantForAutofill="no" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_login"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/password_login"
        android:layout_marginTop="40dp"
        android:id="@+id/button_login" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/regicter_txt"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button_login"
        android:layout_marginTop="50dp"
        android:text="@string/create_account_button"

        android:textSize="20sp" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/travelers"
        android:layout_marginBottom="500dp"
        android:importantForAccessibility="no" />

</RelativeLayout>